docs/apache-airflow-providers-google/10.9.0/_sources/_api/airflow/providers/google/cloud/links/dataproc/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.dataproc`
=======================================================

.. py:module:: airflow.providers.google.cloud.links.dataproc

.. autoapi-nested-parse::

   This module contains Google Dataproc links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataproc.DataprocLink
   airflow.providers.google.cloud.links.dataproc.DataprocListLink
   airflow.providers.google.cloud.links.dataproc.DataprocClusterLink
   airflow.providers.google.cloud.links.dataproc.DataprocJobLink
   airflow.providers.google.cloud.links.dataproc.DataprocWorkflowLink
   airflow.providers.google.cloud.links.dataproc.DataprocWorkflowTemplateLink
   airflow.providers.google.cloud.links.dataproc.DataprocBatchLink
   airflow.providers.google.cloud.links.dataproc.DataprocBatchesListLink



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataproc.__getattr__



Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataproc.DATAPROC_BASE_LINK
   airflow.providers.google.cloud.links.dataproc.DATAPROC_JOB_LINK
   airflow.providers.google.cloud.links.dataproc.DATAPROC_CLUSTER_LINK
   airflow.providers.google.cloud.links.dataproc.DATAPROC_WORKFLOW_TEMPLATE_LINK
   airflow.providers.google.cloud.links.dataproc.DATAPROC_WORKFLOW_LINK
   airflow.providers.google.cloud.links.dataproc.DATAPROC_BATCH_LINK
   airflow.providers.google.cloud.links.dataproc.DATAPROC_BATCHES_LINK
   airflow.providers.google.cloud.links.dataproc.DATAPROC_JOB_LINK_DEPRECATED
   airflow.providers.google.cloud.links.dataproc.DATAPROC_CLUSTER_LINK_DEPRECATED


.. py:function:: __getattr__(name)


.. py:data:: DATAPROC_BASE_LINK

   

.. py:data:: DATAPROC_JOB_LINK

   

.. py:data:: DATAPROC_CLUSTER_LINK

   

.. py:data:: DATAPROC_WORKFLOW_TEMPLATE_LINK

   

.. py:data:: DATAPROC_WORKFLOW_LINK

   

.. py:data:: DATAPROC_BATCH_LINK

   

.. py:data:: DATAPROC_BATCHES_LINK

   

.. py:data:: DATAPROC_JOB_LINK_DEPRECATED

   

.. py:data:: DATAPROC_CLUSTER_LINK_DEPRECATED

   

.. py:class:: DataprocLink


   Bases: :py:obj:`airflow.models.BaseOperatorLink`

   Helper class for constructing Dataproc resource link.

   .. warning::
      This link is deprecated.

   .. py:attribute:: name
      :value: 'Dataproc resource'

      

   .. py:attribute:: key
      :value: 'conf'

      

   .. py:method:: persist(context, task_instance, url, resource)
      :staticmethod:


   .. py:method:: get_link(operator, *, ti_key)

      Link to external system.

      Note: The old signature of this function was ``(self, operator, dttm: datetime)``. That is still
      supported at runtime but is deprecated.

      :param operator: The Airflow operator object this link is associated to.
      :param ti_key: TaskInstance ID to return link for.
      :return: link to external system



.. py:class:: DataprocListLink


   Bases: :py:obj:`airflow.models.BaseOperatorLink`

   Helper class for constructing list of Dataproc resources link.

   .. warning::
      This link is deprecated.

   .. py:attribute:: name
      :value: 'Dataproc resources'

      

   .. py:attribute:: key
      :value: 'list_conf'

      

   .. py:method:: persist(context, task_instance, url)
      :staticmethod:


   .. py:method:: get_link(operator, *, ti_key)

      Link to external system.

      Note: The old signature of this function was ``(self, operator, dttm: datetime)``. That is still
      supported at runtime but is deprecated.

      :param operator: The Airflow operator object this link is associated to.
      :param ti_key: TaskInstance ID to return link for.
      :return: link to external system



.. py:class:: DataprocClusterLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataproc Cluster Link.

   .. py:attribute:: name
      :value: 'Dataproc Cluster'

      

   .. py:attribute:: key
      :value: 'dataproc_cluster'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, operator, cluster_id, region, project_id)
      :staticmethod:



.. py:class:: DataprocJobLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataproc Job Link.

   .. py:attribute:: name
      :value: 'Dataproc Job'

      

   .. py:attribute:: key
      :value: 'dataproc_job'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, operator, job_id, region, project_id)
      :staticmethod:



.. py:class:: DataprocWorkflowLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataproc Workflow Link.

   .. py:attribute:: name
      :value: 'Dataproc Workflow'

      

   .. py:attribute:: key
      :value: 'dataproc_workflow'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, operator, workflow_id, project_id, region)
      :staticmethod:



.. py:class:: DataprocWorkflowTemplateLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataproc Workflow Template Link.

   .. py:attribute:: name
      :value: 'Dataproc Workflow Template'

      

   .. py:attribute:: key
      :value: 'dataproc_workflow_template'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, operator, workflow_template_id, project_id, region)
      :staticmethod:



.. py:class:: DataprocBatchLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataproc Batch Link.

   .. py:attribute:: name
      :value: 'Dataproc Batch'

      

   .. py:attribute:: key
      :value: 'dataproc_batch'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, operator, batch_id, project_id, region)
      :staticmethod:



.. py:class:: DataprocBatchesListLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataproc Batches List Link.

   .. py:attribute:: name
      :value: 'Dataproc Batches List'

      

   .. py:attribute:: key
      :value: 'dataproc_batches_list'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, operator, project_id)
      :staticmethod:



